--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
   padding-left: 20px;
   padding-top: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  /* display: inline-block; */
 }
 .school {
   background-color: green;
@@ -15,6 +16,7 @@
   padding-left: 20px;
   padding-bottom: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  /* display: inline-block; */
 }
 #wsu-link {
   color: aqua;
@@ -22,4 +24,12 @@
 }
 .comp-sci:hover {
   font-weight: bold;
+}
+.title {
+  display: inline-block;
+}
+.logo {
+  width: 150px;
+  height: 50px;
+  object-fit: contain;
 }
