--- a/index.css
+++ b/index.css
@@ -23,3 +23,29 @@
 .comp-sci:hover {
   font-weight: bold;
 }
+.dtitle {
+  font-size: larger;
+  text-transform: uppercase;
+  background-color: green;
+  color: white;
+}
+.dmessage {
+  width: 800px;
+  background-color: antiquewhite;
+}
+.dcontent {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  background-color: antiquewhite;
+  color: green;
+}
+.dir {
+  display: block;
+}
+.dm-top {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+}
+/* .dm-content {
+  padding-left: 25px;
+} */
